<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">ITS Timetable</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh Timetable</string>
    <string name="title_activity_detail">Class Details</string>
    <string name="title_activity_activity_detail">ActivityDetail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="sync_account_type">timetables.mcgowan.com</string>
    <string name="content_authority">com.mcgowan.timetable.itsligotimetables.app</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Student ID</string>
    <string name="pref_default_display_name" translatable="false"> </string>
    <string name="student_id_hint" translatable="false">S12345678</string>
    <string name="student_id_default" translatable="false"> </string>
    <string name="student_id_key" translatable="false">student_id</string>
    <string name="pref_timetable_type_classes" translatable="false">classes</string>
    <string name="no_info_available" translatable="false">No Class information available</string>
    <string name="no_network" translatable="false">No Class information available. No network connectivity to fetch data</string>
    <string name="server_down" translatable="false">No Class information available. Server is currently down</string>
    <string name="server_unknown" translatable="false">No Class information available. Unknown server error</string>
    <string name="server_invalid" translatable="false">Error, Invalid or no student id supplied</string>

    <string name="pref_student_id_invalid_id">Invalid ID (<xliff:g id="student_id_key">%1$s</xliff:g>)"</string>
    <string name="pref_student_id_unknown_description">Unknown ID... (<xliff:g id="student_id_key">%1$s</xliff:g>)"</string>


    <string name="server_status_key" translatable="false">server-status</string>

    <string name="pref_title_timetable_type">Timetable Type</string>
    <string name="pref_timetable_key">timetable_type</string>
    <string-array name="timetable_type_list_titles">
        <item>Classes</item>
        <item>Available Labs</item>
    </string-array>
    <string-array name="timetable_type_list_values">
        <item>classes</item>
        <item>labs</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_map">View current location on a map</string>
    <string name="action_share">Share</string>
    <string name="class_start_time_content_description">time for scheduled class</string>
    <string name="set_id_content">There is currently no student id set for this app. Please enter your student id in order to load in timetable information correctly</string>
    <string name="no_id_dialog_title">Oops.....</string>
    <string name="ok">OK</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_version">Version</string>
    <string name="app_version_title">App Version</string>
    <string name="title_today">Today</string>
    <string name="title_week">This week</string>
    <string name="title_next">Next</string>
    <string name="blank"> </string>
    <string name="no_classes_left_today">No more classes today or tomorrow :-)</string>
    <string name="no_classes_today">No classes today :-)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_settings_label">Settings</string>
    <string name="drawer_other_label">Other</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_message">Users please be aware that this app takes its data from the IT\'s website for my personal timetable. It relies solely on this site being kept up to date, so alas if the website is incorrect, this app will be too :-(</string>
    <string name="nav_header_title">IT Sligo</string>
    <string name="nav_header_sub_title">Student Timetables</string>
    <string name="update_message">In this update, I have removed the settings option in the tradiitonal sense and replaced it with the new sliding menu bar from the left, Should make fore a better UI experience. Enjoy :-)</string>


</resources>
