<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.mcgowan.timetable.android">


    <com.mcgowan.timetable.android.StudentIdEditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/student_id_default"
        android:hint="@string/student_id_hint"
        android:inputType="textCapWords"
        android:key="@string/student_id_key"
        android:maxLength="9"
        custom:minLength="9"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />


    <ListPreference
        android:defaultValue="@string/pref_timetable_type_classes"
        android:entries="@array/timetable_type_list_titles"
        android:entryValues="@array/timetable_type_list_values"
        android:key="@string/pref_timetable_key"
        android:title="@string/pref_title_timetable_type" />

</PreferenceScreen>
