<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_settings_label">
        <menu>
            <item
                android:id="@+id/nav_settings_general"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/pref_header_general" />
            <item
                android:id="@+id/nav_settings_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/action_about" />
            <item
                android:id="@+id/nav_settings_version"
                android:icon="@drawable/ic_whatshot_black_24dp"
                android:title="@string/action_version" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:title="Tools" />
    </group>


</menu>
